# liilill

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_runner.py
examples/: sample.py
liilill/: __init__.py
src/liilill/: agent.py
tests/: conftest.py  test_agent.py
